fixed css alignment

--- a/src/sass/app/sell_popup.scss
+++ b/src/sass/app/sell_popup.scss
@@ -106,6 +106,10 @@
                 th {
                     line-height: 24px;
                     border-bottom: $COLOR_GRAY_SHADE;
+
+                    @media screen and (max-width: 480px) {
+                        line-height: 30px;
+                    }
                 }
                 td, td[data-balloon] {
                     border-bottom: 1px solid $COLOR_LIGHT_GRAY;
@@ -120,12 +124,6 @@
                         font-weight: normal;
                     }
                 }
-                @media screen and (max-width: 480px) {
-                    th {
-                        line-height: 30px;
-                    }
-                }
-
                 .last_cell {
                     border-bottom: 0;
                     min-height: 20px;
@@ -206,18 +204,19 @@
             }
             #sell_details_audit {
                 border-left: none;
+
+                @media screen and (max-width: 480px) {
+                    .view-chart {
+                        display: none;
+                    }
+                    .previous-wrapper {
+                        height: 30px;
+                        width: 45px;
+                    }
+                }
             }
             @media only screen and (min-width: 767px) and (max-width: 768px) { /* ipad */
                 max-height: 450px;
-            }
-            @media screen and (max-width: 480px) {
-                .view-chart {
-                    display: none;
-                }
-                .previous-wrapper {
-                    height: 30px;
-                    width: 45px;
-                }
             }
         }
     }
